<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingresa tus datos para seguir!"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="User"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="Password"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continuar" />

</LinearLayout>